--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,20 @@
 <header class="bg-black text-white">
-    <nav class="flex justify-center space-x-15 p-4">
-        <%= link_to "HOME", root_path, class: "hover:text-red-300 ease-in-out duration-200" %>
-        <%= link_to "TOP 10", "#", class: "hover:text-red-300 ease-in-out duration-200" %>
-        <%= link_to "TRENDING", "#", class: "hover:text-red-300 ease-in-out duration-200" %>
-        <%= link_to "WHAT TO WATCH", "#", class: "hover:text-red-300 ease-in-out duration-200" %>
+  <div class="flex items-center justify-between px-6 py-4">
+    
+    <p class="text-xl font-bold">CINERATE</p>
+
+   
+    <nav class="flex gap-15">
+      <%= link_to "HOME", root_path, class: "hover:text-red-300 transition" %>
+      <%= link_to "TOP 10", "#", class: "hover:text-red-300 transition" %>
+      <%= link_to "TRENDING", "#", class: "hover:text-red-300 transition" %>
+      <%= link_to "WHAT TO WATCH", "#", class: "hover:text-red-300 transition" %>
+      <%= link_to "ABOUT", about_path, class: "hover:text-red-300 transition" %>
     </nav>
+
+    
+    <p class="cursor-pointer hover:text-red-300 transition">
+      Sign up
+    </p>
+  </div>
 </header>
