--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,17 @@
 
   <body class="min-h-screen flex flex-col">
     <%= render "shared/header" %>
+
+     <% if notice %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert"><%= alert %></p>
+    <% end %>
     <main class="flex-1"> 
       <%= yield %>
     </main>
+
     <%= render "shared/footer" %>
   </body>
 </html>
