Add links for login, logout, registration Display current user email in the header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
   </head>
 
   <body class="min-h-screen flex flex-col">
-    <%= render "shared/header" %>
+    <div class="fixed inset-0 -z-10 h-full w-full bg-white [background:radial-gradient(135%_135%_at_50%_0%,#fff_30%,#fecaca_65%,#f87171_100%)]"></div>    <%= render "shared/header" %>
 
      <% if notice %>
       <p class="notice"><%= notice %></p>
@@ -45,3 +45,4 @@
     <%= render "shared/footer" %>
   </body>
 </html>
+
