--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,14 +1,24 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation" data-turbo-cache="false">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
-    </h2>
-    <ul>
+  <div id="error_explanation" 
+       data-turbo-cache="false"
+       class="bg-red-50 border border-red-200 rounded-xl p-4 mb-6">
+    <div class="flex items-center gap-2 mb-2">
+      <svg class="w-5 h-5 text-red-500" fill="currentColor" viewBox="0 0 20 20">
+        <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd"></path>
+      </svg>
+      <h2 class="text-sm font-semibold text-red-800 uppercase tracking-wide">
+        <%= I18n.t("errors.messages.not_saved",
+                   count: resource.errors.count,
+                   resource: resource.class.model_name.human.downcase)
+         %>
+      </h2>
+    </div>
+    <ul class="text-sm text-red-700 space-y-1">
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li class="flex items-start gap-2">
+          <span class="text-red-500 mt-0.5">•</span>
+          <%= message %>
+        </li>
       <% end %>
     </ul>
   </div>
