--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="relative w-full overflow-hidden leading-[0] bg-transparent mt-10">
+<div class="relative w-full overflow-hidden leading-[0] bg-transparent mt-20 -mb-[1px]">
   <svg 
     viewBox="0 0 390 20" 
     xmlns="http://www.w3.org/2000/svg" 
@@ -9,13 +9,16 @@
   </svg>
 </div>
 
-<footer class="bg-black py-8 text-center text-sm text-white">
-  <div class="max-w-7xl mx-auto px-6 ">
-    <div class="flex justify-center space-x-6 mb-4">
+<footer class="bg-black py-10 text-center text-sm text-white relative z-10">
+  <div class="max-w-7xl mx-auto px-6">
+    <div class="flex justify-center space-x-6 mb-6">
        <%= link_to "Privacy Policy", "#", class: "hover:text-yellow-200 transition" %>
        <%= link_to "Terms of Service", "#", class: "hover:text-yellow-200 transition" %>
        <%= link_to "Contact", "#", class: "hover:text-yellow-200 transition" %>
     </div>
-    <p class="text-gray-400">© <%= Time.current.year %> <span class="font-['Anton'] tracking-wider text-white ml-1">CINERATE</span></p>
+    <p class="text-gray-400">
+      © <%= Time.current.year %> 
+      <span class="font-['Anton'] tracking-wider text-white ml-1">CINERATE</span>
+    </p>
   </div>
 </footer>
