Create MoviesController Implement index action to display movies from TMDB Set movies index as the main page after login Display list of movies with: Title Poster image Release date Limit movies list to 20

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
-<div class="relative w-full overflow-hidden leading-[0] bg-transparent mt-20 -mb-[1px]">
+<div class="relative w-full overflow-hidden leading-0 bg-transparent mt-20 -mb-px">
   <svg 
     viewBox="0 0 390 20" 
     xmlns="http://www.w3.org/2000/svg" 
-    class="relative block w-full h-[20px] md:h-[40px] text-black fill-current"
+    class="relative block w-full h-5 md:h-10 text-black fill-current"
     preserveAspectRatio="none"
   >
     <path d="M0 20 C 100 0, 290 0, 390 20 L 390 20 L 0 20 Z"></path>
