--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -42,9 +42,9 @@
     </div>
     
     <nav class="flex flex-wrap justify-center gap-x-8 gap-y-2 text-[11px] font-bold tracking-[0.2em]">
+      <%= link_to "ALL MEDIA", media_path, class: "nav-link-animated text-white hover:text-white transition whitespace-nowrap uppercase" %>
       <%= link_to "TRENDING", trending_path, class: "nav-link-animated text-white hover:text-white transition whitespace-nowrap uppercase" %>
       <%= link_to "TOP 10", "#", class: "nav-link-animated text-white hover:text-white transition whitespace-nowrap uppercase" %>
-      <%= link_to "WHAT TO WATCH", "#", class: "nav-link-animated text-white hover:text-white transition whitespace-nowrap uppercase" %>
       <%= link_to "ABOUT", about_path, class: "nav-link-animated text-white hover:text-white transition whitespace-nowrap uppercase" %>
     </nav>
   </div>
